fix image distortion

--- a/src/sass/components/_sub-event-list.scss
+++ b/src/sass/components/_sub-event-list.scss
@@ -74,10 +74,6 @@
 
   img {
     position: relative;
-    min-width: 100%;
-    max-width: none;
-    min-height: 100%;
-    max-height: none;
     -webkit-filter: grayscale(1);
     -webkit-filter: grayscale(100%);
     filter: gray;
